--- a/TravepRecordApp.iOS/TravepRecordApp.iOS.csproj
+++ b/TravepRecordApp.iOS/TravepRecordApp.iOS.csproj
@@ -133,4 +133,7 @@
       <Name>TravepRecordApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\icons\plus.png" />
+  </ItemGroup>
 </Project>
