--- a/TravepRecordApp.iOS/TravepRecordApp.iOS.csproj
+++ b/TravepRecordApp.iOS/TravepRecordApp.iOS.csproj
@@ -64,6 +64,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
     <AppExtensionDebugBundleId />
+    <LaunchForBackgroundFetch>false</LaunchForBackgroundFetch>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
@@ -141,7 +142,6 @@
       <Version>4.5.0.356</Version>
     </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\TravepRecordApp\TravepRecordApp.csproj">
       <Project>{8A0265AD-342C-4BDF-A785-B6045C90B5B7}</Project>
