--- a/TravepRecordApp.iOS/TravepRecordApp.iOS.csproj
+++ b/TravepRecordApp.iOS/TravepRecordApp.iOS.csproj
@@ -126,6 +126,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Mobile.Client">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
