--- a/TravepRecordApp.Android/TravepRecordApp.Android.csproj
+++ b/TravepRecordApp.Android/TravepRecordApp.Android.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MySql.Data">
+      <Version>8.0.20</Version>
+    </PackageReference>
+    <PackageReference Include="MySqlConnector">
+      <Version>0.69.3</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
