--- a/TravepRecordApp.iOS/TravepRecordApp.iOS.csproj
+++ b/TravepRecordApp.iOS/TravepRecordApp.iOS.csproj
@@ -129,6 +129,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Permissions">
+      <Version>3.0.0.12</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
